fixed 2 bugs caused by page seting overflow to hidden

--- a/src/static/sass/components/Model S/_safetySection.sass
+++ b/src/static/sass/components/Model S/_safetySection.sass
@@ -237,18 +237,19 @@
 
     /* LearnMore Added Element */
     &__learnMoreContainer
-        height: 75vh
-        @include responsive(2200)
-            height: 85vh
-        @include responsive(1920)
-            height: 90vh
-        @include responsive(1600)
-            height: 130vh
-        @include responsive(1280)
-            height: 105vh
-        @include responsive(tablet)
-            height: unset
-            padding-bottom: 5rem
+        min-height: 110vh
+        // height: 75vh
+        // @include responsive(2200)
+        //     height: 85vh
+        // @include responsive(1920)
+        //     height: 90vh
+        // @include responsive(1600)
+        //     height: 130vh
+        // @include responsive(1280)
+        //     height: 105vh
+        // @include responsive(tablet)
+        //     height: unset
+        //     padding-bottom: 5rem
 
     &__learnMoreInnerContainer
         padding: 7rem 0
