--- a/src/static/sass/components/Model S/_slider.sass
+++ b/src/static/sass/components/Model S/_slider.sass
@@ -188,7 +188,7 @@
         @include responsive(1366)
             width: 70%
         @include responsive(1100)
-            width: 85%
+            width: 86%
         @include responsive(900)
             width: 99%
         @include responsive(800)
